--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            text-align: center;
+            font-style: italic;
+            color: blue;
+        }
+        h2{
+            text-align: center;
+            font-style: oblique;
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,6 +32,13 @@
     <!-- Selectores de etiqueta -->
     <!-- Atributos CSS: text-align: center, font-style, color-->
     <h2>Evaluación M2</h2>
+    <nav>
+        <a href="ejercicio1.html" target="_blank">ejercicio1</a>
+        <a href="ejercicio2.html" target="_blank">ejercicio2</a>
+        <a href="ejercicio3.html" target="_blank">ejercicio3</a>   
+    </nav>
+
+    
 
     <!-- Crear enlace a la página "ejercicio1.html" -->
     <!-- Crear enlace a la página "ejercicio2.html" -->
