--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -5,6 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        ul{
+            margin: 30px;
+           padding: 20px;
+          
+        }
+        li{
+            font-style: italic;
+            color: blue;
+        }
+        th{
+            color: rgb(187, 22, 39);
+            border: 1px solid;
+        }
+        table{
+            background-color: aqua;
+            padding: 10px;
+            border: 1px solid;
+        }
+        td{
+            border: 1px solid;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,6 +39,32 @@
     <!-- Atributos CSS: Margin, Padding, font-style, color , background-color -->
     <div>
         <!-- Tu solución aquí  -->
+        <ul >
+            <li>evaluacion1</li>
+            <li>evaluacion2</li>
+            <li>evaluacion3</li>
+        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Intitucion</th>
+                </tr> 
+            </thead>
+            <tbody>
+                <tr>
+                <td>Camilo</td>
+                <td>Hernandez</td>
+                <td>Cesde</td>
+            </tr>
+            <tr>
+                <td>juan</td>
+                <td>lopera</td>
+                <td>cesde</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 
