--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,6 +17,17 @@
     <!-- Atributos CSS: Border, position, z-index, cursor  -->
     <div>
         <!-- Tu solución aquí  -->
+        <ul>
+            <li>Juan</li>
+            <li>Camilo</li>
+            <li>hernandez</li>
+            <li>lopera</li>
+        </ul>
+        <select name="" id="">
+            <option value="">primera opcion</option>
+            <option value="">segunda opcion</option>
+            <option value="">tercera opcion</option>
+        </select>
     </div>
 </body>
 
