--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             font-style: oblique;
             color: green;
         }
+        nav{
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -25,7 +28,7 @@
     <!-- CSS interno -->
     <!-- Selectores de etiqueta -->
     <!-- Atributos CSS: text-align: center, font-style, color-->
-    <h1>Nombre Completo</h1>
+    <h1>Juan camilo hernandez lopera</h1>
 
 
     <!-- CSS interno -->
