--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -15,7 +15,7 @@
     <!-- Selectores de identificación -->
     <!-- Etiquetas HTML: ul, li, select, option -->
     <!-- Atributos CSS: Border, position, z-index, cursor  -->
-    <div>
+    <div class="div3">
         <!-- Tu solución aquí  -->
         <ul>
             <li>Juan</li>
